# affinewarp

./: pyproject.toml  setup.py
affinewarp/: __init__.py
examples/: piecewise_warping.ipynb  shift_warping.ipynb  shift_warping_iwase.ipynb  test_whltiming.ipynb
